--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -68,6 +68,7 @@
 				    </div>
 				 </li>
 				 <li><%= link_to 'Relatorios', relatorios_path %></li>
+				 <li><%= link_to 'Relatorios por codigo', relatorio_por_codigo_relatorios_path %></li>
 			</ul>
 		</div>
 	</div>
