--- a/app/views/relatorios/_registros.html.erb
+++ b/app/views/relatorios/_registros.html.erb
@@ -15,7 +15,10 @@
 		g.blank_slate  do
 	    	content_tag :div, "Nenhum registro encontrado", class: 'well'
 	  	end
-	  	g.column name: 'Código', attribute: 'id', detach_with_id: :id_filter
+	  	g.column name: 'Código', attribute: 'id', 
+	  		custom_filter: Redespacho.all.map{|red| [red.id]}, detach_with_id: :id_filter do |registro|
+	  		registro.id	
+	  	end
 		g.column name: 'Empresa', attribute: 'empresa_id', 
 				custom_filter: Empresa.all.map{|emp| [emp.nome, emp.id]}, detach_with_id: :empresa_filter do |registro|
 			registro.empresa.nome if registro.empresa
@@ -48,11 +51,11 @@
 			valores[:frete] = valores[:frete] + registro.valor_frete if registro.valor_frete 		 	
 		 	'R$' + registro.valor_frete.to_s if registro.valor_frete
 		end
-		g.column name: 'Valor Redespacho', attribute: 'valor_redespacho', filter: false do |registro| 
+		g.column name: 'Valor a pagar', attribute: 'valor_redespacho', filter: false do |registro| 
 		 	valores[:redespacho] = valores[:redespacho] + registro.valor_redespacho if registro.valor_redespacho
 			'R$' + registro.valor_redespacho.to_s if registro.valor_redespacho
 		end
-		g.column name: 'Valor Comissão', attribute: 'valor_comissao', filter: false do |registro| 
+		g.column name: 'Valor a receber', attribute: 'valor_comissao', filter: false do |registro| 
 		 	valores[:comissao] = valores[:comissao] + registro.valor_comissao if registro.valor_comissao
 		 	'R$' + registro.valor_comissao.to_s if registro.valor_comissao
 		end	
@@ -82,12 +85,13 @@
 		g.last_row do |number_of_columns|         # This row will always be added to the bottom of the grid
 		    content_tag(:tr,
 		    	content_tag(:td, 'Total',:colspan => 8) +
-		      	content_tag(:td, 'R$' + number_with_delimiter(valores[:frete].to_s)) +
-		      	content_tag(:td, 'R$' + number_with_delimiter(valores[:redespacho].to_s)) +
-		      	content_tag(:td, 'R$' + number_with_delimiter(valores[:comissao].to_s)) +
+		      	content_tag(:td, 'R$' + number_with_delimiter(number_with_precision(valores[:frete].to_s, precision: 2))) +
+		      	content_tag(:td, 'R$' + number_with_delimiter(number_with_precision(valores[:redespacho].to_s, precision: 2))) +
+		      	content_tag(:td, 'R$' + number_with_delimiter(number_with_precision(valores[:comissao].to_s, precision: 2))) +
 		      	content_tag(:td, '') +
 		      	content_tag(:td, number_with_delimiter(valores[:volume].to_s) + ' un.') +
-		      	content_tag(:td, number_with_delimiter(valores[:peso].to_s) + 'Kg'),
+		      	content_tag(:td, number_with_delimiter(valores[:peso].to_s) + 'Kg') +
+		      	content_tag(:td, '', :colspan => 3),
 		     :class => 'last_row')
 		  end
     end %>
