--- a/app/views/relatorios/relatorio_contas_a_receber.pdf.erb
+++ b/app/views/relatorios/relatorio_contas_a_receber.pdf.erb
@@ -18,7 +18,7 @@
 		</style>
 	</head>
 	<div style="text-align: center">
-		<h2>Relatório de Contas a Pagar - Controle de Cargas</h2>
+		<h2>Relatório de Contas a Receber - Controle de Cargas</h2>
 	</div>
 	<p>Relatorio gerado em: <%= Time.now.strftime("%d/%m/%Y %H:%m:%S") %> </p>
 	<br/>
