Mudado Menu superior
o painel lateral foi removido e adicionado um menu superior!

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -220,11 +220,12 @@ header {
 
 #painel_conteudo {
  // background: #dcdddf;
-  height: 100%;
-  width: 85%;
+  height: auto;
+  width: 95%;
   float: left;
   display: inline-block;
-  margin-left: 240px;  
+  margin-left: 40px;  
+  
   .overflow-x {
     overflow-x: scroll;
   }
