--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,55 +23,63 @@
 			<%= link_to 'Sair', destroy_user_session_path, :method => :delete %>
 		</div>
 	</header>
-	<div id="painel_esquerdo">
-		<div class="info_user">
-			<% if !current_user.nil? %>
-			<span class="img_avatar">
-				<%= image_tag 'toledoexpress.jpg' %>
-			</span>
-			<span class="user_name">
-				<%=  current_user.nome  %>
-			</span>
-			<span class="user_perfil">
-				<%= %>
-			</span>
-			<span class="ultima_visita">
-				Ultima visita: <%= current_user.last_sign_in_at %>
-			</span>
-			<% end %>
-		</div>
-		<div class="menu">
-			<ul>
-				<li class="menu_drop">
-					<div class="btn-group">
-				      <button type="button" class="btn btn-link"><%= link_to 'Controle de Carga', redespachos_path %></button>
-				      <button type="button" class="btn dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-				        <span class="caret"></span>
-				        <span class="sr-only">Toggle Dropdown</span>
-				      </button>
-				      <ul class="dropdown-menu" role="menu">
-				        <li><%= link_to 'Novo registro', new_redespacho_path %></li>
-				      </ul>
-				    </div>
-				 </li>
-				<li><%= link_to 'Empresas', empresas_path %></li>
-				<li class="menu_drop">
-					<div class="btn-group">
-				      <button type="button" class="btn btn-link"><%= link_to 'Usuarios', users_path %></button>
-				      <button type="button" class="btn dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-				        <span class="caret"></span>
-				        <span class="sr-only">Toggle Dropdown</span>
-				      </button>
-				      <ul class="dropdown-menu" role="menu">
-				        <li><%= link_to 'Novo usuário', new_user_path %></li>
-				      </ul>
-				    </div>
-				 </li>
-				 <li><%= link_to 'Relatorios', relatorios_path %></li>
-				 <li><%= link_to 'Relatorios por codigo', relatorio_por_codigo_relatorios_path %></li>
-			</ul>
-		</div>
-	</div>
+	
+	<nav class="navbar navbar-default">
+	  <div class="container-fluid">
+	    <!-- Brand and toggle get grouped for better mobile display -->
+		    <ul class="nav navbar-nav">
+		    	<li class="dropdown">
+		    		<%= link_to redespachos_path, :class => 'dropdown-toggle', :data => {:toggle => 'dropdown'}, role:'button', :aria => {:expanded => 'false'} do %>
+		    			Controle de Cargas
+		    			<span class="caret"></span>
+		    			 <ul class="dropdown-menu" role="menu">
+				            <li><%= link_to 'Listagem', redespachos_path %></li>
+				            <li><%= link_to 'Novo', new_redespacho_path %></li>
+				          </ul>
+		    		<% end %>
+		    	</li>
+		    	
+		    	<li class="dropdown">
+		    		<%= link_to empresas_path, :class => 'dropdown-toggle', :data => {:toggle => 'dropdown'}, role:'button', :aria => {:expanded => 'false'} do %>
+		    			Empresas
+		    			<span class="caret"></span>
+		    			 <ul class="dropdown-menu" role="menu">
+				            <li><%= link_to 'Listagem', empresas_path %></li>
+				            <li><%= link_to 'Novo', new_empresa_path %></li>
+				          </ul>
+		    		<% end %>
+		    	</li>
+		    	
+		    	
+		    	<li class="dropdown">
+		    		<%= link_to users_path, :class => 'dropdown-toggle', :data => {:toggle => 'dropdown'}, role:'button', :aria => {:expanded => 'false'} do %>
+		    			Usuários
+		    			<span class="caret"></span>
+		    			 <ul class="dropdown-menu" role="menu">
+				            <li><%= link_to 'Listagem', users_path %></li>
+				            <li><%= link_to 'Novo', new_user_path %></li>
+				          </ul>
+		    		<% end %>
+		    	</li>
+		    	
+		    	
+		    	<li class="dropdown">
+		    		<%= link_to relatorios_path, :class => 'dropdown-toggle', :data => {:toggle => 'dropdown'}, role:'button', :aria => {:expanded => 'false'} do %>
+		    			Relatórios
+		    			<span class="caret"></span>
+		    			 <ul class="dropdown-menu" role="menu">
+				            <li><%= link_to 'Relatorios', relatorios_path %></li>
+				            <li><%= link_to 'Relatorios por codigo', relatorio_por_codigo_relatorios_path %></li>
+				          </ul>
+		    		<% end %>
+		    	</li>
+		    </ul>
+	  </div>
+    </nav>
+	
+	
+	
+	
 	<div id="painel_conteudo">
 		<br/>
 		
