--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,16 +5,68 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
-<script src="//code.jquery.com/ui/1.11.2/jquery-ui.js"></script>
-<link rel="stylesheet" href="//code.jquery.com/ui/1.11.2/themes/smoothness/jquery-ui.css">
-  
+	<script src="//code.jquery.com/ui/1.11.2/jquery-ui.js"></script>
+	<link rel="stylesheet" href="//code.jquery.com/ui/1.11.2/themes/smoothness/jquery-ui.css">
+  	<link href='http://fonts.googleapis.com/css?family=Droid+Sans' rel='stylesheet' type='text/css'>
 </head>
 <body>
 	<header>
 		<div class="esquerda">
-		<p class="titulo">Controll Log - Sistema de Controle de Encomendas</p>
+			<nav class="navbar navbar-default">
+			  <div class="container-fluid">
+			    <!-- Brand and toggle get grouped for better mobile display -->
+				    <ul class="nav navbar-nav">
+				    	<li class="dropdown">
+				    		<%= link_to redespachos_path, :class => 'dropdown-toggle', :data => {:toggle => 'dropdown'}, role:'button', :aria => {:expanded => 'false'} do %>
+				    			Controle de Cargas
+				    			<span class="caret"></span>
+				    			 <ul class="dropdown-menu" role="menu">
+						            <li><%= link_to 'Listagem', redespachos_path %></li>
+						            <li><%= link_to 'Novo', new_redespacho_path %></li>
+						          </ul>
+				    		<% end %>
+				    	</li>
+				    	
+				    	<li class="dropdown">
+				    		<%= link_to empresas_path, :class => 'dropdown-toggle', :data => {:toggle => 'dropdown'}, role:'button', :aria => {:expanded => 'false'} do %>
+				    			Empresas
+				    			<span class="caret"></span>
+				    			 <ul class="dropdown-menu" role="menu">
+						            <li><%= link_to 'Listagem', empresas_path %></li>
+						            <li><%= link_to 'Novo', new_empresa_path %></li>
+						          </ul>
+				    		<% end %>
+				    	</li>
+				    	
+				    	
+				    	<li class="dropdown">
+				    		<%= link_to users_path, :class => 'dropdown-toggle', :data => {:toggle => 'dropdown'}, role:'button', :aria => {:expanded => 'false'} do %>
+				    			Usuários
+				    			<span class="caret"></span>
+				    			 <ul class="dropdown-menu" role="menu">
+						            <li><%= link_to 'Listagem', users_path %></li>
+						            <li><%= link_to 'Novo', new_user_path %></li>
+						          </ul>
+				    		<% end %>
+				    	</li>
+				    	
+				    	
+				    	<li class="dropdown">
+				    		<%= link_to relatorios_path, :class => 'dropdown-toggle', :data => {:toggle => 'dropdown'}, role:'button', :aria => {:expanded => 'false'} do %>
+				    			Relatórios
+				    			<span class="caret"></span>
+				    			 <ul class="dropdown-menu" role="menu">
+						            <li><%= link_to 'Relatorios', relatorios_path %></li>
+						            <li><%= link_to 'Relatorios por codigo', relatorio_por_codigo_relatorios_path %></li>
+						          </ul>
+				    		<% end %>
+				    	</li>
+				    </ul>
+			  </div>
+	    </nav>
 		</div>
 		<div class="direita">
+			<p class="titulo">Controll Log - Sistema de Controle de Encomendas</p>
 			<ul id="menu_header">
 				<div>
 					<li><%= link_to 'Meus dados', edit_user_registration_path %></li>
@@ -24,61 +76,10 @@
 		</div>
 	</header>
 	
-	<nav class="navbar navbar-default">
-	  <div class="container-fluid">
-	    <!-- Brand and toggle get grouped for better mobile display -->
-		    <ul class="nav navbar-nav">
-		    	<li class="dropdown">
-		    		<%= link_to redespachos_path, :class => 'dropdown-toggle', :data => {:toggle => 'dropdown'}, role:'button', :aria => {:expanded => 'false'} do %>
-		    			Controle de Cargas
-		    			<span class="caret"></span>
-		    			 <ul class="dropdown-menu" role="menu">
-				            <li><%= link_to 'Listagem', redespachos_path %></li>
-				            <li><%= link_to 'Novo', new_redespacho_path %></li>
-				          </ul>
-		    		<% end %>
-		    	</li>
-		    	
-		    	<li class="dropdown">
-		    		<%= link_to empresas_path, :class => 'dropdown-toggle', :data => {:toggle => 'dropdown'}, role:'button', :aria => {:expanded => 'false'} do %>
-		    			Empresas
-		    			<span class="caret"></span>
-		    			 <ul class="dropdown-menu" role="menu">
-				            <li><%= link_to 'Listagem', empresas_path %></li>
-				            <li><%= link_to 'Novo', new_empresa_path %></li>
-				          </ul>
-		    		<% end %>
-		    	</li>
-		    	
-		    	
-		    	<li class="dropdown">
-		    		<%= link_to users_path, :class => 'dropdown-toggle', :data => {:toggle => 'dropdown'}, role:'button', :aria => {:expanded => 'false'} do %>
-		    			Usuários
-		    			<span class="caret"></span>
-		    			 <ul class="dropdown-menu" role="menu">
-				            <li><%= link_to 'Listagem', users_path %></li>
-				            <li><%= link_to 'Novo', new_user_path %></li>
-				          </ul>
-		    		<% end %>
-		    	</li>
-		    	
-		    	
-		    	<li class="dropdown">
-		    		<%= link_to relatorios_path, :class => 'dropdown-toggle', :data => {:toggle => 'dropdown'}, role:'button', :aria => {:expanded => 'false'} do %>
-		    			Relatórios
-		    			<span class="caret"></span>
-		    			 <ul class="dropdown-menu" role="menu">
-				            <li><%= link_to 'Relatorios', relatorios_path %></li>
-				            <li><%= link_to 'Relatorios por codigo', relatorio_por_codigo_relatorios_path %></li>
-				          </ul>
-		    		<% end %>
-		    	</li>
-		    </ul>
-	  </div>
-    </nav>
 	
 	
 	
+	<!--
 	<div id="painel_esquerdo">
 		<div class="info_user">
 			<% if !current_user.nil? %>
@@ -97,6 +98,7 @@
 			<% end %>
 		</div>
 	</div>
+	-->
 	<div id="painel_conteudo">
 		<br/>
 		
