--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -12,7 +12,8 @@
  *
  *= require_tree .
  *= require_self
- *= require jqx.base 
+ *= require jqx.base
+ *= require jqx.arctic  
  */
 @import '_botoes.scss';
 
