--- a/app/assets/stylesheets/bootstrap_and_overrides.css
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css
@@ -5,3 +5,16 @@
   To use Glyphicons sprites instead of Font Awesome, replace with "require twitter-bootstrap-static/sprites"
   =require twitter-bootstrap-static/fontawesome
   */
+ 
+
+table {
+	border-collapse: separate;
+	border-spacing: 2px;
+}
+td, th {
+	padding: 2px;
+}
+a:hover {
+	color: initial;
+	text-decoration: none;
+}
