--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,13 +17,9 @@
 			    <!-- Brand and toggle get grouped for better mobile display -->
 				    <ul class="nav navbar-nav">
 				    	<li class="dropdown">
-				    		<%= link_to redespachos_path, :class => 'dropdown-toggle', :data => {:toggle => 'dropdown'}, role:'button', :aria => {:expanded => 'false'} do %>
+				    		<%= link_to redespachos_path, :class => '', role:'button', :aria => {:expanded => 'false'} do %>
 				    			Controle de Cargas
-				    			<span class="caret"></span>
-				    			 <ul class="dropdown-menu" role="menu">
-						            <li><%= link_to 'Listagem', redespachos_path %></li>
-						            <li><%= link_to 'Novo', new_redespacho_path %></li>
-						          </ul>
+				    			
 				    		<% end %>
 				    	</li>
 				    	
