--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -7,14 +7,14 @@
                             <div class="small-box bg-aqua">
                                 <div class="inner">
                                     <h3>
-                                        150
+                                        <%= @redespachos_ultima_semana %>
                                     </h3>
                                     <p>
-                                        New Orders
+                                        Cargas cadastradas na ultima semana
                                     </p>
                                 </div>
                                 <div class="icon">
-                                    <i class="ion ion-bag"></i>
+                                    <i class="fa fa-truck"></i>
                                 </div>
                                 <a href="#" class="small-box-footer">
                                     More info <i class="fa fa-arrow-circle-right"></i>
@@ -26,10 +26,10 @@
                             <div class="small-box bg-green">
                                 <div class="inner">
                                     <h3>
-                                        53<sup style="font-size: 20px">%</sup>
+                                        <%= @redespachos_ultima_mes %>
                                     </h3>
                                     <p>
-                                        Bounce Rate
+                                        Cargas cadastradas no mês
                                     </p>
                                 </div>
                                 <div class="icon">
