--- a/app/assets/stylesheets/bootstrap_and_overrides.css
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css
@@ -18,3 +18,7 @@ a:hover {
 	color: initial;
 	text-decoration: none;
 }
+.form-horizontal .form-group {
+	margin-left: 0 !important;
+    margin-right: 0 !important;
+}
