--- a/app/views/redespachos/index.html.erb
+++ b/app/views/redespachos/index.html.erb
@@ -18,115 +18,165 @@
 	</div>
 	
 	<div id="new_register_window">
-		<div>
-		<%= form_for(@redespacho, :remote => true, :html => {:id => 'new_register', :role => "form", :class =>"form-horizontal"}) do |f| %>
-		  <% if @redespacho.errors.any? %>
-		    <div id="error_explanation">
-			  <div class="alert alert-danger" role="alert">
-			  	<strong>Erro salvar empresa:</strong>
-			  	<br/><br/>
-			    <ul>
-			    	<% @redespacho.errors.full_messages.each do |message| %>
-			        	<li><%= message %></li>
-			      	<% end %>
-			    </ul>
-			   </div>
-		    </div>
-		  <% end %>
-		  
-			<div class="">
-	            <div style="overflow: hidden;">
-				<table>
-					
-		                <tr>
-		                    <td align="right">Status</td>
-		                    <td align="left"><%= f.select :status, options_for_select([['Em Andamento','AND'],['Finalizado', 'FIN']], selected: @redespacho.status), {}, :class =>"combo" %></td>
-		                
-		                    <td align="right">Empresa</td>
-		                    <td align="left"><%= f.collection_select :empresa_id ,Empresa.all, :id,:nome,{:include_blank => 'Selecione...'}, {:class => 'combo input_class'} %></td>
-		                </tr>
-		                <tr>
-		                    <td align="right">Remetente</td>
-		                    <td align="left"><%= f.text_field :remetente, :class => "input_class" %></td>
-		                
-		                    <td align="right">Cidade do remetente</td>
-		                    <td align="left"><%= f.text_field :remetente_cidade, :class => "input_class" %></td>
-		                </tr>
-		                <tr>
-		                    <td align="right">Tipo</td>
-		                    <td align="left"><%= f.select :tipo_redespacho, options_for_select([['Entrega','ENT'],['Coleta', 'COL'],['Redespacho', 'RED'],['Outros', 'OUT']], selected: @redespacho.tipo_redespacho), {}, :class =>"combo " %></td>
-		                
-		                    <td align="right">Destinatario</td>
-		                    <td align="left"><%= f.text_field :destinatario, :class => "input_class" %></td>
-		                </tr>
-		                <tr>
-		                    <td align="right">Cidade do destinatario</td>
-		                    <td align="left"><%= f.text_field :destinatario_cidade, :class => "input_class" %></td>
-		                
-		                    <td align="right">Valor frete</td>
-		                    <div style='margin-top: 3px;' id='percentageInput'>
-		                    <td align="left"><%= f.text_field :valor_frete, :class => "input_class currency" %></td>
-		                </tr>
-		                <tr>
-		                    <td align="right">Valor redespacho</td>
-		                    <td align="left"><%= f.text_field :valor_redespacho , :class => 'input_class currency' %></td>
-		                
-		                    <td align="right">Valor de comissão</td>
-		                    <td align="left"><%= f.text_field :valor_comissao, :class => "input_class currency" %></td>
-		                </tr>
-		                <tr>
-		                    <td align="right">Forma de Pagamento</td>
-		                    <td align="left"><%= f.select :forma_pagamento, options_for_select([['Boleto'],['Dinheiro'],['A Vista'],['A Prazo'],['Depósito'],['Cartão de crédito'],['Cheque'], ['Pago']], selected: @redespacho.forma_pagamento), {}, :class =>"combo " %></td>
-		                
-		                    <td align="right">Volume</td>
-		                    <td align="left"><%= f.text_field :volume, :class => "input_class" %></td>
-		                </tr>
-		                <tr>
-		                    <td align="right">Peso</td>
-		                    <td align="left"><%= f.text_field :peso, :class => "input_class decimal" %></td>
-		                
-		                    <td align="right">NF - Valor</td>
-		                    <td align="left"><%= f.text_field :nf_valor, :class => "input_class currency" %></td>
-		                </tr>
-		                <tr>
-		                    <td align="right">NF - Número</td>
-		                    <td align="left"><%= f.text_field :nf_numero, :class => "input_class" %></td>
-		                    
-		                    <td align="right">Recebido por</td>
-		                    <td align="left"><%= f.text_field :recebido_por, :class => "input_class" %></td>                    
-		                </tr>
-		                <tr>
-		                    <td align="right">Data de envio</td>
-		                    <td align="left"><div class="calendar" id='redespacho_data_envio' name='redespacho[data_envio]'></div></td>
-		                    
-		                    <td align="right">Data de entrega</td>
-		                    <td align="left"><div class="calendar" id='redespacho_data_entrega' name='redespacho[data_entrega]'</td>                    
-		                </tr>
-		                <tr>
-		                	<td align="right">JadLog Número da lista</td>
-		                    <td align="left"><%= f.text_field :jadlog_lista_numero, :class => "input_class" %></td>
-		                    	
-		                	
-		                    <td align="right">JadLog Número de conhecimento</td>
-		                    <td align="left"><%= f.text_field :jadlog_conhecimento_numero, :class => "input_class" %></td>
-		                
-		                </tr>
-		                
-	                <tr>
-	                	<td align="right"></td>
-	                	<td align="right"></td>
-	                	<td align="right"></td>
-	                    <td style="padding-top: 10px;" align="right">
-	                		<%= f.submit 'Salvar', :id => 'Save', :class => "" %>
-							<%= link_to 'Cancelar', '#', :id => 'Cancel', :class => "btn_fechar" %>
-						</td>
-	               	</tr>
-	            </table>
+		<div class="row">
+			<%= form_for(@redespacho, :remote => true, :html => {:id => 'new_register', :role => "form", :class =>"form-horizontal"}) do |f| %>
+					  <% if @redespacho.errors.any? %>
+					    <div id="error_explanation">
+						  <div class="alert alert-danger" role="alert">
+						  	<strong>Erro salvar empresa:</strong>
+						  	<br/><br/>
+						    <ul>
+						    	<% @redespacho.errors.full_messages.each do |message| %>
+						        	<li><%= message %></li>
+						      	<% end %>
+						    </ul>
+						   </div>
+					    </div>
+					  <% end %>
+					  <div class="col-md-4">
+						<div class="box box-primary">
+						    <div class="box-header">
+						        <h3 class="box-title">Dados da encomenta</h3>
+						    </div>
+						<div class="box-body">
+							<div class="form-group">
+						 		<%= f.label :status %>
+	                			<%= f.select :status, options_for_select([['Em Andamento','AND'],['Finalizado', 'FIN']], selected: @redespacho.status), {}, :class =>" form-control combo" %>
+							</div>
+							
+							<div class="form-group">
+						 		<%= f.label :empresa %>
+	                			<%= f.collection_select :empresa_id ,Empresa.all, :id,:nome,{:include_blank => 'Selecione...'}, {:class => 'form-control combo'} %>
+							</div>
+							
+							<div class="form-group">
+						 		<%= f.label :remetente %>
+	                			<%= f.text_field :remetente, :class => "form-control", :placeholder=> :remetente%>
+							</div>
+							
+							<div class="form-group">
+						 		<%= f.label :remetente_cidade %>
+	                			<%= f.text_field :remetente_cidade, :class => "form-control",:placeholder=> :remetente_cidade%>
+							</div>
+							
+							<div class="form-group">
+						 		<%= f.label :destinatario %>
+	                			<%= f.text_field :destinatario, :class => "form-control",:placeholder=> :destinatario%>
+							</div>
+							
+							<div class="form-group">
+						 		<%= f.label :destinatario_cidade %>
+	                			<%= f.text_field :destinatario_cidade, :class => "form-control",:placeholder=> :destinatario_cidade%>
+							</div>
+							
+							<div class="form-group">
+						 		<%= f.label :tipo_redespacho %>
+	                			<%= f.select :tipo_redespacho, options_for_select([['Entrega','ENT'],['Coleta', 'COL'],['Redespacho', 'RED'],['Outros', 'OUT']], selected: @redespacho.tipo_redespacho), {}, :class =>"form-control combo" %>
+	                			
+							</div>
+					 	</div>	
+					 </div>
+				</div>
+					 
+					 
+				 <div class="col-md-4">
+					<div class="box box-primary">
+					    <div class="box-header">
+					        <h3 class="box-title">Valores</h3>
+					    </div>
+						<div class="box-body">
+							<div class="form-group">
+						 		<%= f.label :valor_frete %>
+	                			<%= f.text_field :valor_frete, :class => "form-control currency",:placeholder=> :valor_frete%>
+							</div>
+							
+							<div class="form-group">
+						 		<%= f.label :valor_redespacho %>
+	                			<%= f.text_field :valor_redespacho, :class => "form-control currency",:placeholder=> :valor_redespacho%>
+							</div>
+							
+							<div class="form-group">
+						 		<%= f.label :valor_comissao %>
+	                			<%= f.text_field :valor_comissao, :class => "form-control currency",:placeholder=> :valor_comissao%>
+							</div>
+							
+							<div class="form-group">
+						 		<%= f.label 'Forma de pagamento' %>
+	                			<%= f.select :forma_pagamento, options_for_select([['Boleto'],['Dinheiro'],['A Vista'],['A Prazo'],['Depósito'],['Cartão de crédito'],['Cheque'], ['Pago']], selected: @redespacho.forma_pagamento), {}, :class =>"combo form-control" %>
+							</div>	
+							
+							<div class="form-group">
+						 		<%= f.label :volume %>
+	                			<%= f.text_field :volume, :class => "form-control",:placeholder=> :volume%>
+							</div>
+							
+							<div class="form-group">
+						 		<%= f.label :peso %>
+	                			<%= f.text_field :peso, :class => "form-control",:placeholder=> :peso%>
+							</div>						
+					 	</div>	
+					</div>
+				</div>
 				
-			  	
-			</div>
-		</div
-		<% end %>
+				 <div class="col-md-4">
+					<div class="box box-primary">
+					    <div class="box-header">
+					        <h3 class="box-title">Outras Informações</h3>
+					    </div>
+						<div class="box-body">
+							
+							<div class="form-group">
+						 		<%= f.label 'Data de envio' %>
+	                			<div class="calendar" id='redespacho_data_envio' name='redespacho[data_envio]'></div>
+							</div>
+							
+							<div class="form-group">
+						 		<%= f.label 'Data de entrega' %>
+	                			<div class="calendar" id='redespacho_data_entrega' name='redespacho[data_entrega]'></div>
+							</div>	
+							
+							<div class="form-group">
+						 		<%= f.label :recebido_por %>
+	                			<%= f.text_field :recebido_por, :class => "form-control",:placeholder=> :recebido_por%>
+							</div>		
+							
+							
+							<div class="form-group">
+						 		<%= f.label :nf_valor %>
+	                			<%= f.text_field :nf_valor, :class => "form-control currency",:placeholder=> :nf_valor%>
+							</div>
+							
+							<div class="form-group">
+						 		<%= f.label :nf_numero %>
+	                			<%= f.text_field :nf_numero, :class => "form-control",:placeholder=> :nf_numero%>
+							</div>
+							
+							<div class="form-group">
+						 		<%= f.label 'JadLog Número da lista' %>
+	                			<%= f.text_field :jadlog_lista_numero, :class => "form-control",:placeholder=> :jadlog_lista_numero%>
+							</div>
+							
+							<div class="form-group">
+						 		<%= f.label 'JadLog Número de conhecimento' %>
+	                			<%= f.text_field :jadlog_conhecimento_numero, :class => "form-control",:placeholder=> :jadlog_conhecimento_numero %>
+							</div>	
+					 	</div>	
+					</div>
+				</div>
+				
+				 <div class="col-md-12">
+					<div class="box box-primary">
+						<div class="box-body">
+							<div class="box-footer">
+							  	<%= f.submit 'Salvar', :class => "btn btn-primary" %>
+							  	<%= link_to 'Cancelar', '#', :id => 'Cancel', :class => "btn_fechar btn btn-cancel" %>
+					          </div>
+					 	</div>	
+					</div>
+				</div>
+			<% end %>
+		</div>
 	</div>
-
 </section>
+
+
