Ajustes formatação do dinheiro

--- a/app/views/redespachos/index.html.erb
+++ b/app/views/redespachos/index.html.erb
@@ -87,17 +87,17 @@
 						<div class="box-body">
 							<div class="form-group">
 						 		<%= f.label :valor_frete %>
-	                			<%= f.text_field :valor_frete, :class => "form-control currency",:placeholder=> :valor_frete%>
+	                			<%= f.text_field :valor_frete, :class => "form-control dinheiro",:placeholder=> :valor_frete%>
 							</div>
 							
 							<div class="form-group">
 						 		<%= f.label :valor_redespacho %>
-	                			<%= f.text_field :valor_redespacho, :class => "form-control currency",:placeholder=> :valor_redespacho%>
+	                			<%= f.text_field :valor_redespacho, :class => "form-control dinheiro",:placeholder=> :valor_redespacho%>
 							</div>
 							
 							<div class="form-group">
 						 		<%= f.label :valor_comissao %>
-	                			<%= f.text_field :valor_comissao, :class => "form-control currency",:placeholder=> :valor_comissao%>
+	                			<%= f.text_field :valor_comissao, :class => "form-control dinheiro",:placeholder=> :valor_comissao%>
 							</div>
 							
 							<div class="form-group">
@@ -143,7 +143,7 @@
 							
 							<div class="form-group">
 						 		<%= f.label :nf_valor %>
-	                			<%= f.text_field :nf_valor, :class => "form-control currency",:placeholder=> :nf_valor%>
+	                			<%= f.text_field :nf_valor, :class => "form-control dinheiro",:placeholder=> :nf_valor%>
 							</div>
 							
 							<div class="form-group">
