Mudança de empresas para fornecedor

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -14,7 +14,8 @@
  *= require_self
  *= require jqx.base
  *= require jqx.arctic
- *= require jqx.bootstrap  
+ *= require jqx.bootstrap
+ *= require jqx.controllog  
  *= require jqx.energyblue    
  *= require theme/AdminLTE
  */
