--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -116,9 +116,9 @@
                                 
                             </ul>
                         </li>
-                        <li class="<%= params[:controller] == 'empresas' ? 'active' : '' %>">
-                        	<%= link_to empresas_path do %>
-				    			<i class="fa fa-building"></i> <span>Empresas</span>
+                        <li class="<%= params[:controller] == 'fornecedores' ? 'active' : '' %>">
+                        	<%= link_to fornecedores_path do %>
+				    			<i class="fa fa-building"></i> <span>Fornecedores</span>
 				    		<% end %>
                         </li>
                         <li class="treeview <%= params[:controller] == 'relatorios' ? 'active' : '' %>">
