--- a/app/views/relatorios/relatorio_por_codigo.html.erb
+++ b/app/views/relatorios/relatorio_por_codigo.html.erb
@@ -23,7 +23,7 @@
 	      <thead>
 	        <tr>
 	          <th>Código</th>
-	          <th>Empresa</th>
+	          <th>Fornecedor</th>
 	          <th>Remetente</th>
 	          <th>Cidade do Remetente</th>
 	          <th>Destinatario</th>
