--- a/app/views/relatorios/_filter_external.html.erb
+++ b/app/views/relatorios/_filter_external.html.erb
@@ -39,9 +39,9 @@
 			</div>
 	  	</div>
 	  	<div class="form-group">
-			<label for="inputEmail3" class="col-sm-2 control-label">Empresa</label>
+			<label for="inputEmail3" class="col-sm-2 control-label">Fornecedor</label>
 			<div class="col-sm-2">
-				<%= grid_filter(@registros, :empresa_filter)%>
+				<%= grid_filter(@registros, :fornecedor_filter)%>
 			</div>
 	  	</div>
 	  	<div class="form-group">
